Add footer block & fontawesome

--- a/3 - css/Portfolio-Website/portfolio.html
+++ b/3 - css/Portfolio-Website/portfolio.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://kit.fontawesome.com/c919913309.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="normalize.css" />
     <title>Rob's portfolio site</title>
     <style type="text/css">
@@ -164,7 +165,7 @@
         margin-right: 50px;
       }
       .left-form-field {
-        height: 30px;
+        height: 33px;
         width: 350px;
         min-width: 200px;
         padding: 7px 20px;
@@ -195,6 +196,16 @@
       .second-row {
         text-align: right;
         padding-top: 35px;
+      }
+      /*Footer block*/
+      .footer-block {
+        background-color: #1f2027;
+        height: 90px;
+      }
+      .footer-item {
+        font-size: 105%;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: white;
       }
     </style>
   </head>
@@ -279,6 +290,14 @@
             <td class="second-row">
               <button type="submit" form="contact" name="submit-button" class="submit-button">SUBMIT</button>
             </td>
+          </tr>
+        </table>
+      </div>
+      <div class="footer-block">
+        <table class="block">
+          <tr>
+            <td class="footer-item">This site © 2022 Rob Percival</td>
+            <td></td>
           </tr>
         </table>
       </div>
