Menu block, hover link change color

--- a/3 - css/Portfolio-Website/portfolio.html
+++ b/3 - css/Portfolio-Website/portfolio.html
@@ -49,6 +49,9 @@
         margin: 0 15px;
         color: white;
       }
+      .whitelink:hover {
+        color: dodgerblue;
+      }
       /* Info block */
       .hi-block {
         padding: 110px 0 0 0;
