Footer block, links ok

--- a/3 - css/Portfolio-Website/portfolio.html
+++ b/3 - css/Portfolio-Website/portfolio.html
@@ -319,17 +319,13 @@
       </div>
       <div class="footer-block block">
         <p class="footer-item">This site © 2022 Rob Percival</p>
-        <p class="footer-item right-data">
-          <i class="fa-brands fa-square-facebook"></i><i class="fa-brands fa-twitter"></i>
+        <p class="right-data footer-item">
+          <a href="https://www.facebook.com/rpcodestars" class="footer-item" target="_blank"
+            ><i class="fa-brands fa-square-facebook"></i></a
+          ><a href="https://twitter.com/techedrob" class="footer-item" target="_blank"
+            ><i class="fa-brands fa-twitter"></i
+          ></a>
         </p>
-        <!--         <table>
-          <tr>
-            <td class="footer-item left-data" colspan="150">This site © 2022 Rob Percival</td>
-            <td class="footer-item right-data">
-              <i class="fa-brands fa-square-facebook"></i><i class="fa-brands fa-twitter"></i>
-            </td>
-          </tr>
-        </table> -->
       </div>
     </div>
   </body>
