--- a/3 - css/Portfolio-Website/portfolio.html
+++ b/3 - css/Portfolio-Website/portfolio.html
@@ -195,6 +195,12 @@
         padding: 12px 0;
         border: none;
         border-radius: 5px;
+        transition: 0.1s ease-in-out;
+      }
+      .submit-button:hover {
+        color: white;
+        background-color: black;
+        transform: none;
       }
       .second-row {
         text-align: right;
