Input email type ok

--- a/3 - css/Portfolio-Website/portfolio.html
+++ b/3 - css/Portfolio-Website/portfolio.html
@@ -307,7 +307,7 @@
                   <p class="contact-text">Subject</p>
                   <input type="text" class="field left-form-field" id="subject" placeholder="Reason for your message" />
                   <p class="contact-text">Email address</p>
-                  <input type="text" class="field left-form-field" id="email" placeholder="Your email address" />
+                  <input type="email" class="field left-form-field" id="email" placeholder="Your email address" />
                 </div>
                 <div class="right-form">
                   <p class="contact-text">Message</p>
