Projects block links ok

--- a/3 - css/Portfolio-Website/portfolio.html
+++ b/3 - css/Portfolio-Website/portfolio.html
@@ -275,7 +275,7 @@
             <div class="earth-bbc-card">
               <h3>Earth facts</h3>
               <p class="projects-text">A HTML project about some facts about the earth.</p>
-              <a href="https://google.com" target="_blank">
+              <a href="../../2 - html/helloworld.html" target="_blank">
                 <input class="projects-button" type="button" value="View Project" />
               </a>
             </div>
@@ -285,7 +285,7 @@
             <div class="earth-bbc-card">
               <h3>BBC News Clone</h3>
               <p class="projects-text">This project is a clone of the BBC news website from the Web Dev 2.0 Course.</p>
-              <a href="https://yahoo.com" target="_blank">
+              <a href="https://eco-cdn.co.uk/webdeveloper2.0/content/2-css/bbc.html" target="_blank">
                 <input class="projects-button" type="button" value="View Project" />
               </a>
             </div>
