--- a/3 - css/Portfolio-Website/portfolio.html
+++ b/3 - css/Portfolio-Website/portfolio.html
@@ -196,6 +196,7 @@
         border: none;
         border-radius: 5px;
         transition: 0.1s ease-in-out;
+        cursor: pointer;
       }
       .submit-button:hover {
         color: white;
