--- a/3 - css/Portfolio-Website/portfolio.html
+++ b/3 - css/Portfolio-Website/portfolio.html
@@ -241,6 +241,7 @@
     </style>
   </head>
   <body>
+    <!--A div with a navbar can be also generated with a nav element-->
     <div class="menu">
       <a class="whitelink" href="#about-block">ABOUT ME</a>
       <a class="whitelink" href="#projects-block">PROJECTS</a>
@@ -324,6 +325,7 @@
           </tr>
         </table>
       </div>
+      <!--A div with a footer can be also generated with a footer element-->
       <div class="footer-block block">
         <p class="footer-item">This site © 2022 Rob Percival</p>
         <p class="right-data footer-item">
