Portfolio project, external css

--- a/3 - css/Portfolio-Website/portfolio.html
+++ b/3 - css/Portfolio-Website/portfolio.html
@@ -5,240 +5,9 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://kit.fontawesome.com/c919913309.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" type="text/css" href="normalize.css" />
+    <link rel="stylesheet" type="text/css" href="portfolio.css" />
     <title>Rob's portfolio site</title>
-    <style type="text/css">
-      h2,
-      h3 {
-        font-family: 'Arial black', sans-serif;
-      }
-      .block {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-      .info-block,
-      .projects-block {
-        background-color: #9727e7;
-      }
-      .contact-block {
-        background-color: #3d366f;
-        position: relative;
-        z-index: 3;
-      }
-      .textcenter {
-        text-align: center;
-      }
-      .clear-float {
-        clear: both;
-      }
-      /* Menu on top of the page*/
-      .menu {
-        width: 100%;
-        height: 50px;
-        position: fixed;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: #200e3d;
-        z-index: 5;
-      }
-      .whitelink {
-        font-family: Arial, Helvetica, sans-serif;
-        text-decoration: none;
-        margin: 0 15px;
-        color: white;
-      }
-      .whitelink:hover {
-        color: dodgerblue;
-      }
-      /* Info block */
-      .hi-block {
-        padding: 110px 0 0 0;
-      }
-      .about-block {
-        padding: 60px;
-      }
-      .about-card {
-        background-color: white;
-        height: 610px;
-        min-width: 800px;
-        max-width: 1200px;
-        position: relative;
-        margin: 0 auto;
-        padding: 0 100px 30px 100px;
-        box-shadow: 10px 10px #5e0f97, -10px -10px salmon;
-      }
-      .round-image {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        border-radius: 50%;
-        width: 70%;
-      }
-      .about-image {
-        height: 450px;
-        margin-right: 50px;
-        float: left;
-      }
-      .about-header {
-        padding: 50px 0 20px 0;
-      }
-      .about-text,
-      .projects-text {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      }
-      /*Projects block*/
-      .projects-header {
-        color: white;
-      }
-      .image-container {
-        display: flex;
-        flex-wrap: wrap;
-      }
-      .projects-image {
-        /* float: left; */
-        padding: 10px;
-        height: 400px;
-        border-radius: 20px 20px 0 0;
-        z-index: 0;
-      }
-      .projects-text {
-        font-size: 105%;
-      }
-      .earth-bbc-card {
-        background-color: white;
-        width: 340px;
-        height: 170px;
-        position: relative;
-        z-index: 1;
-        left: 10px;
-        top: -80px;
-        padding: 5px 30px;
-        text-align: center;
-        transition: 0.25s ease-in-out;
-      }
-      .projects-bottom {
-        position: relative;
-        background-color: #9727e7;
-        height: 100px;
-        width: auto;
-        z-index: 2;
-      }
-      .projects-button {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        border: none;
-        border-radius: 5px;
-        box-shadow: 0 0 0 5px lightskyblue;
-        color: blue;
-      }
-      .projects-button:hover {
-        cursor: pointer;
-      }
-      .earth-bbc-card:hover {
-        top: -190px;
-        transform: translateY();
-      }
-      /*contact-block*/
-      .contact-header {
-        color: white;
-      }
-      .contact-form {
-        background-color: #3d366f;
-      }
-      .contact-block {
-        padding: 70px 20px 40px 20px;
-      }
-      .contact-text {
-        font-size: 105%;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        color: white;
-      }
-      p.contact-text {
-        margin-bottom: 10px;
-      }
-      .contact-form {
-        display: flex;
-        align-items: top;
-        justify-content: center;
-        margin-top: 15px;
-      }
-      .left-form {
-        background-color: #3d366f;
-        margin-right: 50px;
-      }
-      .left-form-field {
-        height: 33px;
-        width: 350px;
-        min-width: 200px;
-        padding: 7px 20px;
-      }
-      .right-form-field {
-        height: 275px;
-        width: 650px;
-        resize: both;
-        overflow: auto;
-      }
-      .field {
-        font-size: 105%;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        border-radius: 5px;
-        border: none;
-      }
-      .submit-button {
-        background-color: lightblue;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 90%;
-        font-weight: bold;
-        color: #3d366f;
-        width: 140px;
-        padding: 12px 0;
-        border: none;
-        border-radius: 5px;
-        transition: 0.1s ease-in-out;
-        cursor: pointer;
-      }
-      .submit-button:hover {
-        color: white;
-        background-color: black;
-        transform: none;
-      }
-      .second-row {
-        text-align: right;
-        padding-top: 35px;
-      }
-      /*Footer block*/
-      .footer-block {
-        display: flex;
-        flex-wrap: nowrap;
-        background-color: #1f2027;
-        height: 90px;
-      }
-      .footer-item {
-        font-size: 105%;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        color: white;
-      }
-      .fa-square-facebook,
-      .fa-twitter {
-        font-size: 190%;
-        margin-left: 10px;
-      }
-      .fa-square-facebook:hover,
-      .fa-twitter:hover {
-        color: lightblue;
-      }
-      .left-data {
-        text-align: left;
-      }
-      .right-data {
-        /* text-align: right; */
-        margin-left: 800px;
-      }
-      p.footer-item {
-        white-space: nowrap;
-      }
-    </style>
   </head>
   <body>
     <!--A div with a navbar can be also generated with a nav element-->
